--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     
-    <h2><a href="recipes/asian lettuce wrap.html">Asian Lettuce Wrap</a></h2>
+    <li><a href="recipes/asian lettuce wrap.html">Asian Lettuce Wrap</a></li>
 
-    <h3><a href="recipes/feta chicken.html">Feta Chicken</a></h3>
+    <li><a href="recipes/feta chicken.html">Feta Chicken</a></li>
 
-    <h4><a href="recipes/mediterranean greek salad.html">Mediterranean Greek Salad</a></h4>
-    
+    <li><a href="recipes/mediterranean greek salad.html">Mediterranean Greek Salad</a></li>
+
 </body>
 </html>
